// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentGroups handles a sub-dependency correctly 1`] = `
Array [
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": null,
        "importsToAdd": Object {},
        "insertionCeiling": null,
        "name": "App",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "path": "/src/app.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/src/index.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/utopia/storyboard.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": Object {
          "height": 100,
          "width": 100,
        },
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "div",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "type": "HTML_DIV",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "span",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "h1",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "h2",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "p",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "button",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "input",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "video",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "img",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "type": "HTML_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {},
        "insertionCeiling": null,
        "name": "Conditional",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "CONDITIONALS_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Fragment",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "FRAGMENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
          "utopia-api": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Placeholder",
                "name": "Placeholder",
              },
            ],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "List",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "MAP_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {},
        "insertionCeiling": null,
        "name": "Sample text",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "SAMPLES_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "dependencyName": "@heroicons/react",
      "dependencyStatus": "loaded",
      "type": "PROJECT_DEPENDENCY_GROUP",
    },
  },
]
`;

exports[`getComponentGroups returns all the various default groups 1`] = `
Array [
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": null,
        "importsToAdd": Object {},
        "insertionCeiling": null,
        "name": "App",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "path": "/src/app.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/src/index.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [],
    "source": Object {
      "path": "/utopia/storyboard.js",
      "type": "PROJECT_COMPONENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": Object {
          "height": 100,
          "width": 100,
        },
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "div",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "type": "HTML_DIV",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "span",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "h1",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "h2",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "p",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "button",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "input",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "video",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "img",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "type": "HTML_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {},
        "insertionCeiling": null,
        "name": "Conditional",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "CONDITIONALS_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Fragment",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "FRAGMENT_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "react": Object {
            "importedAs": "React",
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
          "utopia-api": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Placeholder",
                "name": "Placeholder",
              },
            ],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "List",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "MAP_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {},
        "insertionCeiling": null,
        "name": "Sample text",
        "stylePropOptions": Array [
          "do-not-add",
        ],
      },
    ],
    "source": Object {
      "type": "SAMPLES_GROUP",
    },
  },
  Object {
    "insertableComponents": Array [
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "DatePicker",
                "name": "DatePicker",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "DatePicker",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Button",
                "name": "Button",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Button",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "InputNumber",
                "name": "InputNumber",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "InputNumber",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Row",
                "name": "Row",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Row",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Col",
                "name": "Col",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Col",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Space",
                "name": "Space",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Space",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Menu",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Menu.Item",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Menu.SubMenu",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Menu",
                "name": "Menu",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Menu.ItemGroup",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
      Object {
        "defaultSize": null,
        "element": [Function],
        "icon": "component",
        "importsToAdd": Object {
          "antd": Object {
            "importedAs": null,
            "importedFromWithin": Array [
              Object {
                "alias": "Typography",
                "name": "Typography",
              },
            ],
            "importedWithName": null,
          },
          "antd/dist/antd.css": Object {
            "importedAs": null,
            "importedFromWithin": Array [],
            "importedWithName": null,
          },
        },
        "insertionCeiling": null,
        "name": "Typography.Text",
        "stylePropOptions": Array [
          "do-not-add",
          "add-size",
        ],
      },
    ],
    "source": Object {
      "dependencyName": "antd",
      "dependencyStatus": "loaded",
      "type": "PROJECT_DEPENDENCY_GROUP",
    },
  },
]
`;
